package exo1

enum class CategorieEntreprise {
    SA,
    EURL,
    SARL,
    SCP
}