package exo1

/**
 * Classe représentant une Entreprise
 *
 * @property nom la raison sociale de l'entreprise
 * @property categorie la catégorie d'entreprise
 */

data class Entreprise(
    override val nom: String,
    private val categorie: CategorieEntreprise
) : PersonneA(nom) {

    override fun toString(): String {
        return "Entreprise " + categorie.toString() + " " + nom
    }
}