package exo1

class PersonneException(msg: String) : Exception(msg)